<resources>
    <string name="app_name">Library</string>

    <!--app下载更新-->
    <string name="update_title" translatable="false">App Updates</string>
    <string name="update_version" translatable="false">Latest version：%1$s</string>
    <string name="update_size" translatable="false">New version size：%1$s</string>
    <string name="update_content_lb" translatable="false">Update</string>
    <string name="update_content" translatable="false">1.User experience optimization \n2.Some issues </string>
    <string name="update_force_tip" translatable="false"> You need to update the app to continue using</string>
    <string name="down_cancel" translatable="false">Cancel Update</string>
    <string name="down_browser" translatable="false">Browser Download</string>
    <string name="update_text" translatable="false">Update Now</string>
    <string name="update_later" translatable="false">Update late</string>
    <string name="update_retry" translatable="false">Retry</string>
    <string name="update_exit" translatable="false">Cancel</string>
    <string name="update_permission" translatable="false">Please authorize access to the storage space permissions, after the update is more fluid</string>
    <string name="default_update_content" translatable="false"> 1.UX optimization \n2. Performance optimization \n3. Bug fixes</string>
    <string name="it_is_downing">Downloading now...</string>
    <string name="clike2install"> Please click on the notification bar to complete the installation of the app!</string>
    <string name="please2retry">The update failed, please try again! </string>
    <string name="cancle">Cancel</string>
    <string name="exit">Exit</string>
    <string name="refuse2install">You have refused to install the app from an unknown source and the app is temporarily un-updated!</string>
</resources>
