<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="421dp"
        android:layout_gravity="center"
        android:background="@mipmap/update_bg"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/update_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvForceUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/update_force_tip"
            android:textColor="@color/updateColor"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_version"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_size"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvContentTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/update_content_lb"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:minHeight="200dp"
            android:scrollbarSize="1dp"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="16sp"
            tools:text="@string/update_content" />

        <com.open.hule.library.view.NumberProgressBar
            android:id="@+id/nbpProgress"
            style="@style/NumberProgressBar_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:progress_current="0"
            app:progress_max="100"
            app:progress_reached_bar_height="4dp"
            app:progress_reached_color="#4F97EF"
            app:progress_text_color="#3498DB"
            app:progress_text_offset="1dp"
            app:progress_text_size="10sp"
            app:progress_text_visibility="visible"
            app:progress_unreached_bar_height="4dp"
            app:progress_unreached_color="#CCCCCC" />

        <LinearLayout
            android:id="@+id/llEvent"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdateNow"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/update_text"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnCancelUpdate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/down_cancel"
                android:textColor="@color/updateColor"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnUpdateBrowse"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/down_browser"
                android:textColor="@color/updateColor"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnUpdateExit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/update_exit"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnUpdateRetry"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_blue"
                android:text="@string/update_retry"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateLater"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@mipmap/close_dia" />
</LinearLayout>